--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.2",
     "nodemon": "^2.0.15",
     "parser": "^0.1.4",
     "socket.io": "^4.4.1"
