--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "mongoose": "^6.3.2",
     "nodemon": "^2.0.15",
     "parser": "^0.1.4",
-    "socket.io": "^4.4.1"
+    "socket.io": "^4.4.1",
+    "web-push": "^3.5.0"
   },
   "devDependencies": {},
   "scripts": {
