--- a/package.json
+++ b/package.json
@@ -6,19 +6,23 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body": "^5.1.0",
+    "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^14.2.0",
-    "ejs": "^3.1.6",
+    "ejs": "^3.1.8",
+    "engine.io": "^6.4.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.2",
     "nodemon": "^2.0.15",
     "parser": "^0.1.4",
-    "socket.io": "^4.4.1",
-    "web-push": "^3.5.0"
+    "socket.io": "^4.6.0",
+    "web-push": "^3.5.0",
+    "ws": "^8.12.1"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "nodemon movie.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
