--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "ejs": "^3.1.8",
     "engine.io": "^6.4.0",
     "express": "^4.17.1",
+    "imgbb-uploader": "^1.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.15",
     "parser": "^0.1.4",
     "socket.io": "^4.6.0",
